# app/routes/note.routes.js
@@ -19,25 +19,25 @@ module.exports = (app) => {
   // API for Creat Notes
   app.post('/note', helper.TokenValidation, noteController.createNote);
   // API for Get Notes
-  app.get('/notes', helper.TokenValidation, noteController.getNote);
+  app.get('/notes', helper.TokenValidation, noteController.getNotes);
   // API for Get Notes by ID 
   app.get('/note/:id', helper.TokenValidation, noteController.getNoteById);
   // API for Update Notes
-  app.put('/note/:id', helper.TokenValidation, noteController.updateNoteById);
+  app.put('/notes/:id', helper.TokenValidation, noteController.updateNoteById);
   // API for Delete Notes
-  app.delete('/note/:id', helper.TokenValidation, noteController.deleteNoteById);
+  app.delete('/notess/:id', helper.TokenValidation, noteController.deleteNoteById);
 
 
 
   // API for Add Label By Id 
   app.post('/note/:id/label/:id', helper.TokenValidation, labelController.addLabel);
   // API for get Label  
-  app.get('/labels', helper.TokenValidation, labelController.getlabel);
+  app.get('/labels', helper.TokenValidation, labelController.getlabels);
   // API for get Label BY Id 
   app.get('/label/:id', helper.TokenValidation, labelController.getlabelById);
   // API for Update Label by Id 
-  app.put('/label/:id', helper.TokenValidation, labelController.updatelabelById);
+  app.put('/labels/:id', helper.TokenValidation, labelController.updatelabelById);
   // API for Delete Label By Id
-  app.delete("/Label/:id", helper.TokenValidation, labelController.deleteLabelById);
+  app.delete("/labelss/:id", helper.TokenValidation, labelController.deleteLabelById);
 
 }
